fixing signature alignment for mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -133,5 +133,5 @@ body {
   display: block;
   margin: 0 auto;
   position: relative;
-  left: 25%;
+  left: 140px;
 }
